--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -81,9 +81,30 @@
     'titleList' => 'Liste des champs enfants',
 ]); ?>
 
-<div class="row-fluid span4">
+<div class="row-fluid span3 infos-champ">
     <?php if ($this->type === 'Parent') : ?>
-        <?= $this->formChamp ?>
+        <form enctype="application/x-www-form-urlencoded" method="post" class="form-inline" action>
+            <!-- FIXME Div inutile ? -->
+            <div class = 'flexCol'>
+                <?= $this->formChamp->nom_champ ?>
+                <?= $this->formChamp->type_champ ?>
+                <?= $this->formChamp->ID_CHAMP_PARENT ?>
+                <?= $this->formChamp->rubrique ?>
+                <div id="div-list-value">
+                    <h5>Définition des valeurs de la liste</h5>
+                    <div class="row-fluid">
+                        <a href='#' id='add-list-value'>Ajouter une valeur</a>
+                    </div>
+                    <div class="row-fluid">
+                        <div id="list-value" class="span10">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <?= $this->formChamp->save ?>
+        </form>
+
         <table class="table table-bordered table-condensed inline">
             <thead>
                 <tr>
