--- a/public/css/formulaire/formulaire.css
+++ b/public/css/formulaire/formulaire.css
@@ -23,7 +23,7 @@ div[id^='saved-rubriques-'] a {
 	margin-bottom: 20px;
 }
 
-#edit-rubrique #div-list-value {
+.infos-champ #div-list-value {
     display: none;
 }
 
