--- a/application/views/scripts/formulaire/partials/champ/partial-add-and-list-titles.phtml
+++ b/application/views/scripts/formulaire/partials/champ/partial-add-and-list-titles.phtml
@@ -3,12 +3,9 @@
         <h3><?= $this->titleInfo ?? 'Informations sur le champ' ?></h3>
     </div>
 
-    <div class="span6 offset2 <?php if ($this->count === 0) echo 'alert' ?>">
-        <?php if ($this->count === 0): ?>
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <strong>Attention ! </strong>Aucun champ n'est renseigné.
-        <?php else: ?>
+    <?php if ($this->count !== 0): ?>
+        <div class="span6 offset2">
             <h3><?= $this->titleList ?? 'Liste des champs' ?></h3>
-        <?php endif ?>
-    </div>
+        </div>
+    <?php endif ?>
 </div>
