--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -719,28 +719,30 @@ foreach ($tabEffDegKV as $nomChamp => $valeurChamp) {
     addChamp($odf, $nomChamp, $valeurChamp);
 }
 
-// Gestion des avis et dérogations
-$segmentAvisDerogations = $odf->setSegment('avisDerogations');
+try {
+    // Gestion des avis et dérogations
+    $segmentAvisDerogations = $odf->setSegment('avisDerogations');
 
-foreach ($this->avisDerogations as $avisDerogation) {
-    addChamp($segmentAvisDerogations, 'type', $avisDerogation['TYPE']);
-    addChamp($segmentAvisDerogations, 'titre', $avisDerogation['TITRE']);
-    addChamp($segmentAvisDerogations, 'informations', $avisDerogation['INFORMATIONS']);
-    addChamp($segmentAvisDerogations, 'avis', $avisDerogation['LIBELLE_AVIS']);
-    addChamp($segmentAvisDerogations, 'identifiantdossierleve', $avisDerogation['ID_DOSSIER_LIE']);
+    foreach ($this->avisDerogations as $avisDerogation) {
+        addChamp($segmentAvisDerogations, 'type', $avisDerogation['TYPE']);
+        addChamp($segmentAvisDerogations, 'titre', $avisDerogation['TITRE']);
+        addChamp($segmentAvisDerogations, 'informations', $avisDerogation['INFORMATIONS']);
+        addChamp($segmentAvisDerogations, 'avis', $avisDerogation['LIBELLE_AVIS']);
+        addChamp($segmentAvisDerogations, 'identifiantdossierleve', $avisDerogation['ID_DOSSIER_LIE']);
 
-    if (true === boolval($avisDerogation['DISPLAY_HISTORIQUE'])) {
-        $avisDerogation['DISPLAY_HISTORIQUE'] = 'Oui';
-    } else {
-        $avisDerogation['DISPLAY_HISTORIQUE'] = 'Non';
+        if (true === boolval($avisDerogation['DISPLAY_HISTORIQUE'])) {
+            $avisDerogation['DISPLAY_HISTORIQUE'] = 'Oui';
+        } else {
+            $avisDerogation['DISPLAY_HISTORIQUE'] = 'Non';
+        }
+
+        addChamp($segmentAvisDerogations, 'affichagehistorique', $avisDerogation['DISPLAY_HISTORIQUE']);
+
+        $segmentAvisDerogations->merge();
     }
 
-    addChamp($segmentAvisDerogations, 'affichagehistorique', $avisDerogation['DISPLAY_HISTORIQUE']);
-
-    $segmentAvisDerogations->merge();
-}
-
-$odf->mergeSegment($segmentAvisDerogations);
+    $odf->mergeSegment($segmentAvisDerogations);
+} catch (OdfException $e) {}
 
 // Gestion des formulaires personnalisés
 $serviceUtils = new Service_Utils();
@@ -786,7 +788,7 @@ foreach ($this->formulaires as $formulaire) {
 
 try{
     $chemin = null;
-    
+
     if ($this->infosDossier['ID_PLATAU'] !== null) {
         $chemin = implode(DS, array(
             REAL_DATA_PATH,
