--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -290,64 +290,81 @@ function retrieveInfoDossier($segment, $dossierInfos) {
 	}
 
     // Gestion des avis & dérogations
-    $segmentAvisDerogations = $segment->avisDerogations;
+    try {
+        $avisDerogations = $segment->avisDerogations;
+    } catch (Exception $e) {}
 
-    foreach ($dossierInfos["AVIS_DEROGATIONS"] as $avisDerogation) {
-        setVars($segmentAvisDerogations, 'type', $avisDerogation['TYPE']);
-        setVars($segmentAvisDerogations, 'titre', $avisDerogation['TITRE']);
-        setVars($segmentAvisDerogations, 'informations', $avisDerogation['INFORMATIONS']);
-        setVars($segmentAvisDerogations, 'avis', $avisDerogation['LIBELLE_AVIS']);
-        setVars($segmentAvisDerogations, 'identifiantdossierleve', $avisDerogation['ID_DOSSIER_LIE']);
+    if (isset($avisDerogations)) {
+        if (!empty($dossierInfos["AVIS_DEROGATIONS"])) {
+            foreach ($dossierInfos["AVIS_DEROGATIONS"] as $avisDerogation) {
+                setVars($avisDerogations, 'type', $avisDerogation['TYPE']);
+                setVars($avisDerogations, 'titre', $avisDerogation['TITRE']);
+                setVars($avisDerogations, 'informations', $avisDerogation['INFORMATIONS']);
+                setVars($avisDerogations, 'avis', $avisDerogation['LIBELLE_AVIS']);
+                setVars($avisDerogations, 'identifiantdossierleve', $avisDerogation['ID_DOSSIER_LIE']);
 
-        if (true === boolval($avisDerogation['DISPLAY_HISTORIQUE'])) {
-            $avisDerogation['DISPLAY_HISTORIQUE'] = 'Oui';
+                if (true === boolval($avisDerogation['DISPLAY_HISTORIQUE'])) {
+                    $avisDerogation['DISPLAY_HISTORIQUE'] = 'Oui';
+                } else {
+                    $avisDerogation['DISPLAY_HISTORIQUE'] = 'Non';
+                }
+
+                setVars($avisDerogations, 'affichagehistorique', $avisDerogation['DISPLAY_HISTORIQUE']);
+
+                $avisDerogations->merge();
+            }
         } else {
-            $avisDerogation['DISPLAY_HISTORIQUE'] = 'Non';
+            addChamp($avisDerogations, 'type', '');
+            addChamp($avisDerogations, 'titre', '');
+            addChamp($avisDerogations, 'informations', '');
+            addChamp($avisDerogations, 'avis', '');
+            addChamp($avisDerogations, 'identifiantdossierleve', '');
+            addChamp($avisDerogations, 'affichagehistorique', '');
+
+            $avisDerogations->merge();
         }
-
-        setVars($segmentAvisDerogations, 'affichagehistorique', $avisDerogation['DISPLAY_HISTORIQUE']);
-
-        $segmentAvisDerogations->merge();
     }
 
     // Gestion des formulaires personnalisés
     $serviceUtils = new Service_Utils();
 
     foreach ($dossierInfos['FORMULAIRES'] as $formulaire) {
-        // Permet d'avoir les informations unitairement
-        foreach ($formulaire['RUBRIQUES'] as $rubrique) {
-            addChamp(
-                $segment,
-                $serviceUtils->getFullFusionName(
-                    $formulaire['NOM_INTERNE'],
-                    [
-                        $rubrique['NOM']
-                    ]
-                ),
-                $rubrique['NOM']
-            );
-
-            foreach ($rubrique['CHAMPS'] as $champ) {
-                // Définition du libellé pour les cases à cocher
-                if ('Case à cocher' === $champ['TYPE']) {
-                    if (true === boolval($champ['VALEUR'])) {
-                        $champ['VALEUR'] = 'Oui';
-                    } else {
-                        $champ['VALEUR'] = 'Non';
-                    }
-                }
-
+        if (is_array($formulaire['RUBRIQUES'])) {
+            // Permet d'avoir les informations unitairement
+            foreach ($formulaire['RUBRIQUES'] as $rubrique) {
                 addChamp(
                     $segment,
                     $serviceUtils->getFullFusionName(
                         $formulaire['NOM_INTERNE'],
                         [
-                            $rubrique['NOM'],
-                            $champ['NOM']
+                            $rubrique['NOM']
                         ]
                     ),
-                    $champ['VALEUR']
+                    $rubrique['NOM']
                 );
+
+                foreach ($rubrique['CHAMPS'] as $champ) {
+                    // Définition du libellé pour les cases à cocher
+                    if ('Case à cocher' === $champ['TYPE']) {
+                        if (true === boolval($champ['VALEUR'])) {
+                            $champ['VALEUR'] = 'Oui';
+                        } else {
+                            $champ['VALEUR'] = 'Non';
+                        }
+                    }
+
+                    addChamp(
+                        $segment,
+                        $serviceUtils->getFullFusionName(
+                            $formulaire['NOM_INTERNE'],
+                            [
+                                $rubrique['NOM'],
+                                $champ['NOM']
+                            ]
+                        ),
+                        $champ['VALEUR']
+                    );
+                }
             }
         }
     }
