--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -3,10 +3,14 @@
     case 1: ?>
         <input
             type='text'
-            name='champ-<?= htmlspecialchars($this->champ["ID_CHAMP"]) ?>'
+            name='champ-<?= htmlspecialchars($this->champ["ID_CHAMP"])?>'
             value='<?= isset($this->valeurformulaire[intval($this->champ["ID_CHAMP"])]) ? htmlspecialchars($this->valeurformulaire[$this->champ["ID_CHAMP"]]['VALEUR_STR'], ENT_QUOTES) :'' ?>'
             <?= $this->canWrite ? '': 'disabled'?>
         >
+<!--        name= '<?= isset($this->idxTableau) ? 'valeur-'.$this->valeurformulaire[$this->champ["ID_CHAMP"]]['ID_VALEUR'] : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"]) ?>''
+    -->
+    <!--
+    -->
 
     <?php break;
     // Texte long
@@ -115,7 +119,8 @@
                                     <?= $this->partial('formulaire/partials/partial-input-champ.phtml', [
                                         'champ' => $champsFils,
                                         'valeurformulaire' => $listValeur,
-                                        'canWrite' => isset($this->canWrite) ? $this->canWrite : false
+                                        'canWrite' => isset($this->canWrite) ? $this->canWrite : false,
+                                        'idxTableau' => $k
                                         ]); 
                                     ?>
                                 </td>
