--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -66,7 +66,7 @@
     <?php if(intval(empty($this->champ['tableau']) ? 0 : $this->champ['tableau']) === 1) : ?>
         <?php if(isset($this->canWrite) ? $this->canWrite : false) :?>
             <!-- [button type='button'] pour desactiver le submit auto suite a un clic de bouton -->
-            <button id='btnAddRowTable' type='button' class='btn addRow' attr=<?= $this->champ['ID_CHAMP']?> >Ajouter ligne</button>
+            <button type='button' class='btn addRow btnAddRowTable' attr=<?= $this->champ['ID_CHAMP']?> >Ajouter ligne</button>
         <?php endif ?>
         <table class='table table-striped '>
             <thead>
@@ -136,7 +136,7 @@
                     <?php if(isset($this->canWrite) ? $this->canWrite : true) :?>
                         <td>
                             <!-- [button type='button'] pour desactiver le submit auto suite a un clic de bouton -->
-                                <button type='button' class='deleteRow btn btn-danger'><i class='icon-trash'></i></button>
+                                <button type='button' class='deleteRow btn btn-danger' idParent=<?= $idParent ?> idx=<?= $k ?>><i class='icon-trash'></i></button>
                         </td>
                     <?php endif?>
                 </tr>
@@ -162,7 +162,7 @@
     default:
         break;
 } ?>
-
+<!--
 <script>
     window.onload = () => {
         $('.addRow').click(function() {
@@ -177,3 +177,4 @@
         })
     }
 </script>
+-->
