bug fix ajout ligne dans tableau  js

--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -175,7 +175,7 @@
 <script>
     window.onload = () => {
         $('.addRow').click(function() {
-            $($(this).closest('.ligneTableau')).appendTo($(this).closest('tbody'));
+            document.getElementById('tbody-'+$(this).attr('idparent')).innerHTML += document.getElementById('tbody-'+$(this).attr('idparent')).children[0].innerHTML
         })
 
         $('.deleteRow').click(function(){
